# AiZO

./: CMakeLists.txt  Counter.cpp  Counter.h  MainMenu.cpp  StaticFunctions.cpp
Sources/: Counter.h  HeapSort.cpp  HeapSort.h  InsertionSort.cpp  InsertionSort.h  QuickSort.cpp  QuickSort.h  ShellSort.cpp  ShellSort.h  Sort.cpp  Sort.h
